--- a/NeuralNetwork/NeuralNetwork/NeuralNetwork.vcxproj
+++ b/NeuralNetwork/NeuralNetwork/NeuralNetwork.vcxproj
@@ -63,9 +63,11 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Network.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Header.h" />
+    <ClInclude Include="Network.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
