Got rid of the ugly code, almost
The function now accepts an array of arrays, now that the constants are
in a shared header file.

--- a/NeuralNetwork/NeuralNetwork/NeuralNetwork.vcxproj
+++ b/NeuralNetwork/NeuralNetwork/NeuralNetwork.vcxproj
@@ -67,8 +67,8 @@
     <ClCompile Include="Trainer.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Header.h" />
     <ClInclude Include="Network.h" />
+    <ClInclude Include="Constants.h" />
     <ClInclude Include="Trainer.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
