--- a/NeuralNetwork/NeuralNetwork/NeuralNetwork.vcxproj.filters
+++ b/NeuralNetwork/NeuralNetwork/NeuralNetwork.vcxproj.filters
@@ -32,7 +32,7 @@
     <ClInclude Include="Trainer.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Header.h">
+    <ClInclude Include="Constants.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
