--- a/NeuralNetwork/NeuralNetwork/NeuralNetwork.vcxproj
+++ b/NeuralNetwork/NeuralNetwork/NeuralNetwork.vcxproj
@@ -62,11 +62,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="DataIO.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Network.cpp" />
     <ClCompile Include="Trainer.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="DataIO.h" />
     <ClInclude Include="Network.h" />
     <ClInclude Include="Constants.h" />
     <ClInclude Include="Trainer.h" />
