--- a/NeuralNetwork/NeuralNetwork/NeuralNetwork.vcxproj.filters
+++ b/NeuralNetwork/NeuralNetwork/NeuralNetwork.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClCompile Include="Trainer.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="DataIO.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Network.h">
@@ -33,6 +36,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Constants.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="DataIO.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
